tests/success/integer_hex_literals/main.adept

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    printf(c"0x10 = %lld\n", 0x10)
}

