tests/error/using_trait_on_trait_func/main.adept

pragma => adept(c"3.0")

trait Example<$T> {
    #[using Speak<$T>]
    func invalidFunction(self $T) void
}

trait Speak<$T> {
    func speak(self $T) void
}

func main {
    
}

